# code-plan-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  merge_policy.example.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: CI_GITLAB.md  CI_JENKINS.md  INTEGRATION.md  OVERRIDE_POLICY.md  OVERRIDE_POLICY_v0_4.md  PLAN_CONVENTIONS.md  RELEASE_V0_2.md  SCHEMA_POLICY.md  index.md
examples/: minimal-plan.yaml  override-comments.txt  pyright-report.sample.json  ruff-report.sample.json
githooks/: pre-commit  pre-push
schemas/: audit_overrides.schema.json  expected_impact.schema.json  reconciliation_report.schema.json
scripts/: benchmark_validate.py
src/code_plan_guard/: __init__.py  __main__.py  audit_cli.py  cache.py  cli.py  config.py  constants.py  cycles.py  imports.py  integrations.py  lang_scan.py  messages.py  paths.py  pipeline.py  plan_load.py  plan_quality.py  (+10 more)
tests/: conftest.py  test_audit_cli.py  test_base_ref.py  test_cache.py  test_ci_workflow.py  test_cli_init_plan.py  test_cli_json_contract.py  test_config_v02.py  test_cycles.py  test_hop_depth.py  test_imports_branch.py  test_lang_scan.py  test_language_truth.py  test_paths.py  test_pipeline.py  test_plan_load.py  test_plan_quality.py  test_plan_quality_score.py  test_reconcile.py  test_report_cli.py  test_rule_layers.py  test_schema.py  test_star_import.py  test_style.py  test_v02_features.py  test_v03_overrides.py  test_v04_plan_discovery.py
(+4 files in other folders)
